tests/error/linear_errors/parent_moved4.err
Error: Copy violation (at $FILE:19:15)
   | 
17 |     t = s.x
18 |     if b:
19 |         return s.x.y
   |                ^^^^^ Field `s.x.y` cannot be returned ...

Note:
   | 
16 | def foo(s: MyStruct1 @owned, b: bool) -> int:
17 |     t = s.x
   |         --- ... since field `s.x` with non-copyable type `MyStruct2` was
   |             already moved here

Guppy compilation failed due to 1 previous error
